--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-rc.2",
+    "rate-limit-redis": "^1.1.0",
+    "redis": "^2.7.1",
     "serve-favicon": "~2.4.2",
     "validator": "^7.2.0",
     "votifier-send": "^0.1.7"
