--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
     "connect-ensure-login": "^0.1.1",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
